// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/pyenv/extract extractPackageFile() returns a result 1`] = `
Array [
  Object {
    "currentValue": "3.7.1",
    "datasource": "docker",
    "depName": "python",
  },
]
`;

exports[`manager/pyenv/extract extractPackageFile() skips non ranges 1`] = `
Array [
  Object {
    "currentValue": "latestn",
    "datasource": "docker",
    "depName": "python",
  },
]
`;

exports[`manager/pyenv/extract extractPackageFile() supports ranges 1`] = `
Array [
  Object {
    "currentValue": "3.8",
    "datasource": "docker",
    "depName": "python",
  },
]
`;
